--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,13 @@ android {
 
 dependencies {
 
+    implementation "androidx.navigation:navigation-compose:2.5.0"
+    implementation "io.coil-kt:coil:2.1.0"
+    implementation "com.google.accompanist:accompanist-coil:0.23.1"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.google.code.gson:gson:2.9.0"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha15"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
