--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -31,6 +33,10 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        useIR = true
+        freeCompilerArgs += [
+            "-opt-in=kotlin.RequiresOptIn"
+        ]
     }
     buildFeatures {
         compose true
@@ -48,8 +54,12 @@ android {
 dependencies {
 
     implementation "androidx.navigation:navigation-compose:2.5.0"
+    def accompanist_version = '0.24.11-rc'
+    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-webview:$accompanist_version"
+
     implementation "io.coil-kt:coil:2.1.0"
-    implementation "com.google.accompanist:accompanist-coil:0.23.1"
+//    implementation "com.google.accompanist:accompanist-coil:0.15.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.google.code.gson:gson:2.9.0"
     implementation "androidx.paging:paging-compose:1.0.0-alpha15"
@@ -59,6 +69,8 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     testImplementation 'junit:junit:4.13.2'
@@ -67,4 +79,9 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // Hilt 依赖注入
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 }
