--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ android {
 
 dependencies {
 
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+
     implementation "androidx.navigation:navigation-compose:2.5.0"
     def accompanist_version = '0.24.11-rc'
     implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
