--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "io.coil-kt:coil:2.1.0"
 //    implementation "com.google.accompanist:accompanist-coil:0.15.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.google.code.gson:gson:2.9.0"
     implementation "androidx.paging:paging-compose:1.0.0-alpha15"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
