--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
     implementation "com.google.accompanist:accompanist-webview:$accompanist_version"
 
+    implementation("com.google.accompanist:accompanist-pager:0.24.12-rc")
+
     implementation "io.coil-kt:coil:2.1.0"
 //    implementation "com.google.accompanist:accompanist-coil:0.15.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
